<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails"
    android:background="@drawable/ic_wave">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/like_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jogging_icon" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_button"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/big_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/big_shoe" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoebold"
        android:text="@string/product_description_name"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/product_description_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image" />

    <TextView
        android:id="@+id/rating_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:fontFamily="@font/segoesemibold"
        android:text="4.5"
        android:textColor="@color/black"
        android:textSize="@dimen/rating_description_number_size"
        app:layout_constraintBottom_toBottomOf="@+id/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_name"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/star_description"
        android:layout_width="@dimen/star_decription_size_width"
        android:layout_height="@dimen/star_decription_size_height"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/rating_description"
        app:layout_constraintEnd_toStartOf="@+id/rating_description"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/product_name"
        app:layout_constraintTop_toTopOf="@+id/rating_description"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoeregular"
        android:text="@string/description_text"
        android:textSize="@dimen/product_description_size"
        app:layout_constraintEnd_toEndOf="@+id/buy_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/product_name"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/showSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/segoebold"
        android:text="@string/shoe_size"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/shoe_size_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buy_button"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/segoebold"
        android:text="@string/buy_now"
        android:textColor="@color/white"
        android:textSize="@dimen/product_description_buy_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/segoebold"
        android:text="@string/price_product_details"
        android:textSize="@dimen/product_description_price_size"
        app:layout_constraintBottom_toBottomOf="@+id/buy_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="@dimen/shoe_size_width"
        android:layout_height="@dimen/shoe_size_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_shape"
        android:text="@string/size_28"
        android:textColor="@color/black"
        android:textSize="@dimen/shoe_size_textsize"
        app:layout_constraintBottom_toTopOf="@+id/product_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showSize"
        app:layout_constraintVertical_bias="0.108" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="@dimen/shoe_size_width"
        android:layout_height="@dimen/shoe_size_height"
        android:layout_marginStart="4dp"
        android:background="@drawable/search_shape"
        android:text="@string/size_32"
        android:textColor="@color/black"
        android:textSize="@dimen/shoe_size_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="@dimen/shoe_size_width"
        android:layout_height="@dimen/shoe_size_height"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_shape"
        android:text="@string/size_34"
        android:textColor="@color/black"
        android:textSize="@dimen/shoe_size_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="@dimen/shoe_size_width"
        android:layout_height="@dimen/shoe_size_height"
        android:layout_marginStart="8dp"
        android:background="@drawable/selected_size_shape"
        android:text="@string/size_30"
        android:textColor="@color/white"
        android:textSize="@dimen/shoe_size_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="@dimen/shoe_size_width"
        android:layout_height="@dimen/shoe_size_height"
        android:layout_marginStart="8dp"
        android:background="@drawable/search_shape"
        android:text="@string/size_29"
        android:textColor="@color/black"
        android:textSize="@dimen/shoe_size_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>